crates/plotnik-tests/tests/03-analyze/anchors/contextless_exported_anchor_alias.txt
Tail = {
  (identifier)
  .
}

Alias = (Tail)
Q = (Alias)
------------------ DIAGNOSTICS -------------------
error: anchor needs an enclosing node
 --> query.ptk:3:3
  |
3 |   .
  |   ^
  |
help: move the anchor and its neighboring pattern inside a named node
------------------ DEFINITIONS -------------------
